@@ -1,6 +1,6 @@
 Package: gap
 Version: 1.3
-Date: 2022-5-29
+Date: 2022-6-2
 Title: Genetic Analysis Package
 Authors@R: c(person("Jing Hua", "Zhao", role = c("aut", "cre"),
                     email = "jinghuazhao@hotmail.com",
