@@ -23,7 +23,7 @@ export(AE3, ab, allele.recode, allDuplicated, a2g, asplot,
         mhtplot.trunc, mht.control,
         mia, miamiplot, micombine, mr.boot, mtdt, mtdt2, muvar, mvmeta,
    PARn, pbsize, pbsize2, pedtodot, pfc, pfc.sim, pgc, plem2m, plot.hap.score, print.hap.score, pvalue,
-   qqfun, qqunif,
+   qqfun, qqunif, qtlClassifier,
    read.ms.output, revhap, revhap.i, ReadGRM, ReadGRMBin, ReadGRMPLINK, ReadGRMPCA, revStrand, runshinygap,
    s2k, se.exp, se.invlogit, sentinels, snp.ES, snp.HWE, snp.PAR, snptest_sample, solve_skol,
    textbox, toETDT, tscc,
