@@ -134,6 +134,7 @@ makeped           \tab      A function to prepare pedigrees in post-MAKEPED form
 metap             \tab      Meta-analysis of p values\cr
 metareg           \tab      Fixed and random effects model for meta-analysis\cr
 muvar             \tab      Means and variances under 1- and 2- locus (diallelic) QTL model\cr
+qtlClassifier     \tab      A QTL cis/trans classifier\cr
 read.ms.output    \tab      A utility function to read ms output\cr
 revStrand         \tab      Allele on the reverse strand\cr
 runshinygap       \tab      Start shinygap\cr
