@@ -1,10 +1,11 @@
 Version history of the R genetic analysis package (R/gap)
 
 Version 1.3
-29-05-2022	Redocument klem, metareg, mtdt, plot.hap.score, print.hap.score
+02-08-2022	Add qtlClassifier()
 		Add circos.mhtplot2(); Clarificaiton of YAML declaration in gap.Rmd
 		Add cex.axis to axis(1) in mhtplot.trunc() & notes on adjustment data
 		Mask circos.cnvplot due to excessive running time.
+		Redocument klem, metareg, mtdt, plot.hap.score, print.hap.score
 
 Version 1.2.3-6
 10-05-2022	Switch back to three-character maintainer name.
